--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
 		"jsonwebtoken": "^8.5.0",
 		"log4js": "^6.4.0",
 		"multer": "^1.3.0",
+		"mysql": "^2.18.1",
+		"mysql2": "^2.3.3",
 		"npm-run-all": "^4.1.5",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
-		"pg": "^7.12.1",
+		"pg": "^7.18.2",
 		"pg-pool": "^2.0.7",
 		"prettyjson": "^1.2.1",
 		"prop-types": "^15.6.2",
@@ -63,6 +65,7 @@
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/log4js": "^2.3.5",
 		"@types/mocha": "^8.0.4",
+		"@types/mysql": "^2.15.21",
 		"@types/node": "^14.10.0",
 		"@types/passport": "^1.0.4",
 		"@types/passport-local": "^1.0.33",
